--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,8 @@
 /* write your override styles here */
+
+div#wall div.parent div:last-child div#tag-6 {
+  background: url(../images/tag-6.png) no-repeat;
+  z-index: 5;
+  display: block;
+  background-color: blue;
+}
