--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,8 +1,8 @@
 /* write your override styles here */
 
-div#wall div.parent div:last-child div#tag-6 {
-  background: url(../images/tag-6.png) no-repeat;
-  z-index: 5;
+.tag-1 {
+  background: url(../images/tag-1.png) no-repeat;
+  z-index: 7;
   display: block;
-  background-color: blue;
+  margin-left: 5rem;
 }
