Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,6 @@
   background: url(../images/tag-2.png) no-repeat;
   z-index: 6;
   display: block;
-  margin-right: 80rem;
-  padding-top: 20rem;
+  margin-left: 80rem;
+
 }
