Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,3 +14,10 @@
   margin-left: 80rem;
 
 }
+
+#wall #tag-4 {
+  background: url(../images/tag-4.png) no-repeat;
+  z-index: 4;
+  display: block;
+  margin-left: 40rem;
+}
