Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,5 +19,5 @@
   background: url(../images/tag-4.png) no-repeat;
   z-index: 4;
   display: block;
-  margin-left: 40rem;
+  margin-right: 40rem;
 }
