--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -21,3 +21,11 @@
   display: block;
   margin-right: 40rem;
 }
+
+div#wall .parent #tag-5.slick {
+  background: url(../images/tag-5.png) no-repeat;
+  z-index: 3;
+  display: block;
+  margin-left: 50rem;
+}
+
