--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -26,5 +26,5 @@ div#wall .parent #tag-5.slick {
   background: url(../images/tag-5.png) no-repeat;
   z-index: 3;
   display: block;
-  margin-left: 50rem;
+  padding: 50rem;
 }
