--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,6 +15,7 @@
 
 }
 
+/* GUY */
 #wall #tag-4 {
   background: url(../images/tag-4.png) no-repeat;
   z-index: 4;
@@ -22,6 +23,7 @@
   margin-left: 10rem;
 }
 
+/* SMALL BOTTOM */
 div#wall .parent #tag-5.slick {
   background: url(../images/tag-5.png) no-repeat;
   z-index: 3;
