--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -30,3 +30,10 @@ div#wall .parent #tag-5.slick {
   display: block;
   margin-left: 20rem;
 }
+
+div#wall div.parent div:last-child div#tag-6 {
+  background: url(../images/tag-6.png) no-repeat;
+  z-index: 2;
+  display: block;
+  margin-left: 40rem;
+}
