--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,7 +1,27 @@
-#wall div,
-#wall div#tag-2,
-div#wall div#tag-3.slick.wicked,
-div#wall div#tag-4
- {
+#wall > div.tag-1 {
+  display: none;
+}
+
+#wall div.tag-1 + div#tag-2 {
+  display: none;
+}
+
+#wall div#tag-2 + div#tag-3 {
+  display: none;
+}
+
+#wall .parent > div#tag-4 {
+  display: none;
+}
+
+#wall .parent + .parent > div#tag-5.slick {
+  display: none;
+}
+
+div#wall div.parent div:first-child + div:last-child > div#tag-6 {
+  display: none;
+}
+
+body div#wall div.parent:last-child div > #tag-7.slick {
   display: none;
 }
